fix camera zoom issue on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -11,3 +11,16 @@ body,
   padding: 0;
   background: #000000;
 }
+
+#root > div {
+  width: 100%;
+  height: 100%;
+}
+
+.nav {
+  display: none;
+  position: absolute;
+  z-index: 99;
+  top: 0;
+  left: 0;
+}
